Ustawiony tomcat i gotowy szablon

--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,11 @@
     <groupId>pl.coderslab</groupId>
     <artifactId>jee-user-crud</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>war</packaging>
 
     <properties>
-        <maven.compiler.source>21</maven.compiler.source>
-        <maven.compiler.target>21</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <dependencies>
